syntax = "proto3";

package remote;
option go_package = "go-actor/remote";

import "google/protobuf/any.proto";

service Remote {
  rpc OnMessage(OnMessageRequest) returns (OnMessageReply) {}
}

message PID {
  string node = 1;
  string id = 2;
}

message Error {
  int32 code = 1;
  string msg = 2;
  string detail = 3;
}

message Message {
  PID from = 1;
  int64 requestId = 2;
  google.protobuf.Any data = 3;
  int32 flag = 4;
}

message OnMessageRequest {
  PID to = 1;
  Message message = 2;
}

message OnMessageReply {

}